; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/1upkeyboards/sweet16/keymaps/ridingintraffic/extr_keymap.c_tdexample4.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/1upkeyboards/sweet16/keymaps/ridingintraffic/extr_keymap.c_tdexample4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@EXAMPLESTRING4 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tdexample4(%struct.TYPE_4__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i8*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp sge i32 %7, 2
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load i32, i32* @EXAMPLESTRING4, align 4
  %11 = call i32 @SEND_STRING(i32 %10)
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %13 = call i32 @reset_tap_dance(%struct.TYPE_4__* %12)
  br label %14

14:                                               ; preds = %9, %2
  ret void
}

declare dso_local i32 @SEND_STRING(i32) #1

declare dso_local i32 @reset_tap_dance(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
